fixed project screenshot height on Safari

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -37,7 +37,7 @@
 
 .project img {
   width: 250px;
-  height: fit-content;
+  height: 100%;
   border-radius: 10px;
 }
 
